<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--  Name of the application in the launcher [CHAR LIMIT=NONE] -->
    <string name="app_name">Chrome to Phone</string>
    
    <!-- Button name for going back in setup flow [CHAR LIMIT=NONE] -->
    <string name="back">Back</string>
    
    <!-- Button name for going next in setup flow [CHAR LIMIT=NONE] -->
    <string name="next">Next</string>
    
    <!-- Button name for exiting the app at start of setup flow [CHAR LIMIT=NONE] -->
    <string name="exit">Exit</string>
    
    <!-- Prompt to ask user which Google account to use [CHAR LIMIT=NONE] -->
    <string name="select_text">Select an account to use:</string>
    
    <!-- Message that appears if there are no accounts configured on the phone [CHAR LIMIT=NONE] -->
    <string name="no_accounts">There are no accounts setup on this phone.</string>
    
    <!-- Prompt to ask the user to click the 'Next' button to establish a connection [CHAR LIMIT=NONE] -->
    <string name="click_next_text">Click Next to establish the connection between Chrome and this phone.</string>
    
    <!-- Message that warns the user that Google Apps accounts are not supported [CHAR LIMIT=NONE] -->
    <string name="google_apps_warning_text">(Note: Chrome to Phone does not currently support Google Apps accounts).</string>
    
    <!-- Prompt that is shown when Chrome to Phone is connecting to Chrome [CHAR LIMIT=NONE] -->
    <string name="connecting_text">Connecting...</string>
    
    <!-- Message that appears above the 'Disconnect phone' button [CHAR LIMIT=NONE] -->
    <string name="disconnect_text">If you no longer want to send links to this phone, press the button below.</string>
    
    <!-- Message that appears when Chrome to Phone is disconnecting from Chrome [CHAR LIMIT=NONE] -->
    <string name="disconnecting_text">Disconnecting...</string>
    
    <!-- Message that appears when Chrome to Phone cannot connect [CHAR LIMIT=NONE] -->
    <string name="connect_error_text">Error: Unable to connect.</string>
    
    <!-- Error message that appears if the user attempts to use a Google Apps account instead of a normal Google Account [CHAR LIMIT=NONE] -->
    <string name="auth_error_text">Error: Google Apps accounts not supported.</string>
    
    <!--  Button name at end of setup flow [CHAR LIMIT=NONE] -->
    <string name="finish">Finish</string>
    
    <!-- Message to ask user to select their link action preference (either 'Automatically launch links' or 'Let me launch links manually') [CHAR LIMIT=NONE] -->
    <string name="select_link_action_text">Please set your link action preference:</string>
    
    <!-- Option to have Chrome to Phone automatically launch links [CHAR LIMIT=NONE] -->
    <string name="auto_launch_text">Automatically launch links</string>
    
    <!-- Option to have Chrome to Phone let the user manually launch links [CHAR LIMIT=NONE] -->
    <string name="manual_launch_text">Let me launch links manually</string>
    
    <!-- Message that appears at the end of the setup flow. Preserve occurrences of &lt;br> [CHAR LIMIT=NONE] -->
    <string name="setup_complete_text">
        Set-up complete. Your phone is now connected and ready to receive links from Chrome. &lt;br>&lt;br>
        If you have not already done so, you now need to install the Chrome Extension by visiting the
        Chrome Extension gallery on your desktop at&lt;br>http://chrome.google.com/extensions/
        and searching for "Chrome to Phone".
    </string>
    
    <!-- Message that appears when Chrome to Phone has connected [CHAR LIMIT=NONE] -->
    <string name="connected_with_account_text">Your phone is connected to Chrome using this account:</string>
    
    <!-- Message that states the link action preference (either 'Automatically launch links' or 'Let me launch links manually') [CHAR LIMIT=NONE] -->
    <string name="link_action_pref_text">Link action preference:</string>
    
    <!-- Button name to disconnect Chrome to Phone from Chrome [CHAR LIMIT=NONE] -->
    <string name="disconnect">Disconnect phone</string>
    
    <!-- Error message when Chrome to Phone cannot disconnect from Chrome [CHAR LIMIT=NONE] -->
    <string name="disconnect_error_text">Error: Unable to disconnect.</string>
    
    <!-- Button name in menu for Help [CHAR LIMIT=NONE] -->
    <string name="help">Help</string>
    
    <!-- Notification shown when text from the desktop is copied to Android's clipboard (user can now paste the text) [CHAR LIMIT=NONE] -->
    <string name="copied_desktop_clipboard">Copied desktop clipboard</string>
    
    <!-- Introduction text at start of setup flow. Preserve occurrences of &lt;br>, &lt;a href="{tos_link}">, &lt;a href="{pp_link}">, and &lt;a/> [CHAR LIMIT=NONE] -->
    <string name="intro_text">
        Chrome to Phone lets you easily share links, maps, and currently selected phone numbers and text
        between your computer and your phone. &lt;br>&lt;br>You need to install the Chrome
        browser extension on your computer to send links to your phone. The browser extension
        can be downloaded from the Chrome extension gallery at http://chrome.google.com/extensions/.
        Simply search for "Chrome to Phone".&lt;br>&lt;br>There are just 3 simple steps to complete
        the set up on your phone: &lt;br>&lt;br>1. Choose the Google Account to use.&lt;br>
        2. Connect your Chrome and your phone.&lt;br>3. Set your link action preference.&lt;br>&lt;br>
        By using this application, you agree to the &lt;br>
        &lt;a href="{tos_link}">Terms of Service&lt;/a> and
        &lt;a href="{pp_link}">Privacy Policy&lt;/a>.
    </string>
    
    <!-- Text that appears when user chooses Help in the menu. Preserve occurrences of &lt;br>, &lt;a href="{tos_link}">, &lt;a href="{pp_link}">, and &lt;a/> [CHAR LIMIT=NONE] -->
    <string name="help_text">
        Chrome to Phone lets you easily share links, maps, and currently selected phone numbers and text
        between your computer and your phone. &lt;br>&lt;br>It is comprised of two components:
        an Android application and a Chrome browser extension. The browser extension can be
        downloaded from the Chrome extension gallery at http://chrome.google.com/extensions/
        &lt;br>&lt;br>Once the Chrome extension is installed on your computer, you can
        connect your Android phone.&lt;br>&lt;br>You can choose whether links sent to
        your phone are automatically opened by the appropriate application or left as messages
        in the status bar which you can action manually. &lt;br>&lt;br>
        By using this application, you agree to the &lt;br>
        &lt;a href="{tos_link}">Terms of Service&lt;/a> and
        &lt;a href="{pp_link}">Privacy Policy&lt;/a>.
    </string>
    
    <!-- Label for items received today [CHAR LIMIT=NONE] -->
    <string name="today_text">Today</string>
    
    <!-- Label for items received in the last 7 days [CHAR LIMIT=NONE] -->
    <string name="last_seven_days_text">Last 7 days</string>
    
    <!-- Label for items received in the last month [CHAR LIMIT=NONE] -->
    <string name="last_month_text">Last month</string>
    
    <!-- Label for items received older [CHAR LIMIT=NONE] -->
    <string name="older_text">Older</string>
    
    <!-- Menu option for 'Clear all' [CHAR LIMIT=NONE] -->
    <string name="clear_all">Clear all</string>
    
    <!-- Menu option for 'Settings' [CHAR LIMIT=NONE] -->
    <string name="settings">Settings</string>
    
    <!-- Title for dialog where user is asked to share a link with their choice of app [CHAR LIMIT=NONE] -->
    <string name="share_chooser_title">Share with</string>
    
    <!-- Brief notification that appears when user sends link from phone to desktop [CHAR LIMIT=NONE] -->
    <string name="sending_link_toast">Sending link...</string>
    
    <!-- Brief notification that appears when user has sent link from phone to desktop [CHAR LIMIT=NONE] -->
    <string name="link_sent_toast">Link sent</string>
    
    <!-- Brief notification that appears when link cannot be sent from phone to desktop [CHAR LIMIT=NONE] -->
    <string name="link_not_sent_toast">Link not sent</string>
    
    <!-- Brief notification that appears when link cannot be sent from phone to desktop (because of auth issue) [CHAR LIMIT=NONE] -->
    <string name="link_not_sent_auth_toast">Link not sent - authentication required</string>
   
    <!-- Label for history -->
    <string name="history">History</string> 
</resources>
