<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_gradient">
    
    <ImageView
        android:id="@+id/header"
        android:background="@drawable/header"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"/>
        
    <TextView
        android:id="@+id/select_link_action_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_link_action_text"
        android:textColor="#000000"
        android:layout_below="@+id/header"
        android:layout_margin="5dip"/>
        
    <RadioGroup
        android:id="@+id/launch_mode_radio"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:layout_below="@+id/select_link_action_text">
        
	    <RadioButton
	        android:id="@+id/auto_launch"
	        android:text="@string/auto_launch_text"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical"
	        android:textColor="#000000"/>
	        
	    <RadioButton
	        android:id="@+id/manual_launch"
	        android:text="@string/manual_launch_text"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical"
	        android:textColor="#000000"/>
    </RadioGroup>
              
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/footer"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        
        <Button
            android:id="@+id/back"
            android:text="@string/back"
            android:layout_marginTop="5px"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_btn_back"/>
    
        <Button
            android:id="@+id/next"
            android:text="@string/next"
            android:layout_marginTop="5px"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_btn_next"/>
            
    </LinearLayout>
    
</RelativeLayout>