<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_gradient">
    
    <ImageView
        android:id="@+id/header"
        android:background="@drawable/header"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"/>

    <TextView
        android:id="@+id/connected_with_account_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_below="@+id/header"
        android:layout_margin="5dip"/>
        
    <TextView
        android:id="@+id/link_action_pref_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/link_action_pref_text"
        android:textColor="#000000"
        android:layout_below="@+id/connected_with_account_text"
        android:layout_margin="5dip"/>
        
    <RadioGroup
        android:id="@+id/launch_mode_radio"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:layout_below="@+id/link_action_pref_text">
        
        <RadioButton
            android:id="@+id/auto_launch"
            android:text="@string/auto_launch_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="#000000"/>
            
        <RadioButton
            android:id="@+id/manual_launch"
            android:text="@string/manual_launch_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="#000000"/>
            
    </RadioGroup>
    
    <TextView
        android:id="@+id/disconnect_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/disconnect_text"
        android:textColor="#000000"
        android:layout_below="@+id/launch_mode_radio"
        android:layout_margin="5dip"/>
        
    <Button
        android:id="@+id/disconnect"
        android:text="@string/disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/disconnect_text"
        android:layout_margin="5dip"/>
        
    <ProgressBar android:id="@+id/progress_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/disconnect"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginBottom="0dip"
        style="?android:attr/progressBarStyleHorizontal"
        android:indeterminate="true"
        android:visibility="invisible"/>
        
    <TextView
        android:id="@+id/disconnecting_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/disconnecting_text"
        android:textColor="#A0A0A0"
        android:layout_below="@+id/progress_bar"
        android:layout_marginLeft="5dip"
        android:layout_marginTop="0dip"
        android:visibility="invisible"/>
    
</RelativeLayout>